# learnlog

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
doc/: .gitignore  Makefile  abstract.tex  bibliography.bib  learnlog.nw
src/learnlog/: Makefile  capture.nw  cli.nw  commits.nw  gitrepo.nw  learnlog.nw  progsnap2.nw  viewer.nw
tests/: Makefile
